--- a/src/assets/styles/global-variable.scss
+++ b/src/assets/styles/global-variable.scss
@@ -1,7 +1,8 @@
 //colors
-$navbarbackground : #FFFFFF;
+$navbarbackground: #FFFFFF;
 $homebackground:  #F9F9F9;
 $footerbackground: #1D4354;
+$bannerbackground:#1A4156;
 
 $lightgrey: #E3E5E5;
 $lightgreen: #359b00;
