working on bestoffers layout

--- a/src/assets/styles/global-variable.scss
+++ b/src/assets/styles/global-variable.scss
@@ -4,8 +4,10 @@ $homebackground:  #F9F9F9;
 $footerbackground: #1D4354;
 $bannerbackground:#1A4156;
 
+$lightgreen: #6FDA44;
+
 $lightgrey: #E3E5E5;
-$lightgreen: #359b00;
+$green: #359b00;
 
 //heights
 $navbarheight: 70px;
