working on homevideolayout

--- a/src/assets/styles/global-variable.scss
+++ b/src/assets/styles/global-variable.scss
@@ -5,6 +5,7 @@ $footerbackground: #1D4354;
 $bannerbackground:#1A4156;
 
 $lightgreen: #6FDA44;
+$lightbrown: #494949;
 
 $lightgrey: #E3E5E5;
 $green: #359b00;
