working on loginpage

--- a/src/assets/styles/global-variable.scss
+++ b/src/assets/styles/global-variable.scss
@@ -3,6 +3,7 @@ $navbarbackground: #FFFFFF;
 $homebackground:  #F9F9F9;
 $footerbackground: #1D4354;
 $bannerbackground:#1A4156;
+$authbackground:#F2F2F2;
 
 $lightgreen: #6FDA44;
 $lightbrown: #494949;
